--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   gtag('js', new Date());
 
   gtag('config', 'G-7NKJDVDSJJ');
+  gtag('event', 'screen_view', {
+  'app_name': 'gaTest',
+  'screen_name': 'HomePage'
+});
+
 </script>
 
   <body>
